# swagger.json
@@ -184,6 +184,94 @@
           }
         }
       },
+      "/price/changeCatStatus/{catId}": {
+        "put": {
+          "security": [ { "Bearer": [] } ],
+          "tags": ["Standard Price Book"],
+          "summary": "Update Status",
+          "parameters": [
+            {
+              "name": "catId",
+              "in": "path",
+              "required": true,
+              "type": "string",
+              "default": "exampleId",  
+              "description": "ID of the Category"
+            },
+            {
+              "name": "status",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "status": {
+                    "type": "boolean"
+                  }
+                }
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Ok"
+            },
+            "401": {
+              "description": "Error"
+            },
+            "404": {
+              "description": "No found"
+            },
+            "406": {
+              "description": "Validation Error"
+            }
+          }
+        }
+      },
+      "/price/changePriceBookStatus/{priceId}": {
+        "put": {
+          "security": [ { "Bearer": [] } ],
+          "tags": ["Standard Price Book"],
+          "summary": "Update Status",
+          "parameters": [
+            {
+              "name": "priceId",
+              "in": "path",
+              "required": true,
+              "type": "string",
+              "default": "exampleId",  
+              "description": "ID of the Price Book"
+            },
+            {
+              "name": "status",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "status": {
+                    "type": "boolean"
+                  }
+                }
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Ok"
+            },
+            "401": {
+              "description": "Error"
+            },
+            "404": {
+              "description": "No found"
+            },
+            "406": {
+              "description": "Validation Error"
+            }
+          }
+        }
+      },
       "/price/getPriceBookCatById/{catId}": {
         "get": {
           "security": [ { "Bearer": [] } ],
@@ -602,8 +690,29 @@
          
         }
       },
-      
-      
+      "catStatusUpdate":{
+        "properties": {        
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "status": {
+            "type": "string"          
+          }
+         
+        }
+      },
+      "bookStatusUpdate":{
+        "properties": {        
+          "status": {
+            "type": "string"          
+          }
+         
+        }
+      },
+            
       "DealerRegister":{
         "properties": {        
           "name": {
@@ -1214,6 +1323,9 @@
           },
           "priceCatId": {
             "type": "string"
+          },
+          "status":{
+            "type": "boolean"
           }
         }
       },      
@@ -1241,7 +1353,7 @@
             "type": "string"
           },
           "status": {
-            "type": "string"
+            "type": "boolean"
           },
           "description": {
             "type": "string"
